--- a/pipes/src/app/app.component.html
+++ b/pipes/src/app/app.component.html
@@ -32,3 +32,12 @@
   <p>valor transformado por pipe: {{fecha | date:'dd/MM/yyyy'}}</p>
   <p>valor transformado por pipe: {{fecha | date:'dd/MMM/yyyy'}}</p>
 </div>
+
+<div class="container">
+
+  <h3 class="text-center">Pipe personalizado</h3>
+  <p>valor original: {{paraPipe}}</p>
+
+
+  <p>valor transformado por pipe: {{paraPipe | conversor:"multi"}}</p>
+</div>
